Cleaning up openapi specification (removing unneeded websocket definitions) and adding openapi validators
